Fix slow response when clicking on mobile 2

--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ html {
 }
 
 body {
-  touch-action: manipulation;
   position: relative;
   font-family: "Fira Sans", sans-serif;
   background-color: var(--background-color);
